--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "pretty": "prettier --write \"./**/*.{js,jsx,json}\""
+    "pretty": "prettier --write \"./**/*.{js,jsx,json}\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,7 +44,9 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "jest-dom": "^4.0.0",
     "react-test-renderer": "^17.0.2"
-  }
+  },
+  "homepage": "http://sajmonnowak.github.io/Battleship/"
 }
